--- a/public/admin.html
+++ b/public/admin.html
@@ -2,89 +2,155 @@
 <html lang="ru">
 <head>
 <meta charset="UTF-8">
-<title>Админка</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Admin Panel</title>
 <style>
-body { font-family: Arial; padding: 20px; }
-input, select, button { margin: 5px 0; }
+body { font-family: Arial, sans-serif; margin: 20px; }
+input, select, button { margin: 5px 0; padding: 5px; }
+section { margin-bottom: 30px; }
 img { max-width: 100px; display: block; margin-top: 5px; }
 </style>
 </head>
 <body>
+<h1>Панель администратора</h1>
 
+<section id="store-info">
+<h2>Информация о магазине</h2>
+<input type="text" id="store-name" placeholder="Название магазина">
+<input type="text" id="store-inn" placeholder="ИНН">
+<input type="text" id="store-address" placeholder="Адрес">
+<input type="email" id="store-email" placeholder="Email">
+<input type="tel" id="store-phone" placeholder="Телефон">
+<button onclick="saveStoreInfo()">Сохранить</button>
+</section>
+
+<section id="categories">
 <h2>Категории</h2>
-<input type="text" id="categoryName" placeholder="Название категории">
-<button id="addCategory">Добавить категорию</button>
-<ul id="categoryList"></ul>
+<input type="text" id="category-name" placeholder="Название категории">
+<button onclick="addCategory()">Добавить категорию</button>
+<ul id="category-list"></ul>
+</section>
 
+<section id="products">
 <h2>Товары</h2>
-<input type="text" id="productTitle" placeholder="Название">
-<input type="text" id="productDescription" placeholder="Описание">
-<input type="number" id="productPrice" placeholder="Цена">
-<select id="productCategory"></select>
-<input type="file" id="productImage">
-<button id="addProduct">Добавить товар</button>
-<ul id="productList"></ul>
+<input type="text" id="product-title" placeholder="Название товара">
+<input type="text" id="product-description" placeholder="Описание">
+<input type="number" id="product-price" placeholder="Цена">
+<select id="product-category"></select>
+<input type="file" id="product-image">
+<button onclick="addProduct()">Добавить товар</button>
+<ul id="product-list"></ul>
+</section>
 
 <script>
-const token = 'SUPER_SECRET_TOKEN';
+const ADMIN_TOKEN = 'SUPER_SECRET_TOKEN';
 
-async function loadCategories() {
-  const res = await fetch('/api/categories');
-  const categories = await res.json();
-  const list = document.getElementById('categoryList');
-  const select = document.getElementById('productCategory');
-  list.innerHTML = '';
-  select.innerHTML = '';
-  categories.forEach(c => {
-    const li = document.createElement('li'); li.textContent = c.name; list.appendChild(li);
-    const opt = document.createElement('option'); opt.value=c.id; opt.textContent=c.name; select.appendChild(opt);
-  });
-}
-async function loadProducts() {
-  const res = await fetch('/api/products');
-  const products = await res.json();
-  const list = document.getElementById('productList');
-  list.innerHTML = '';
-  products.forEach(p => {
-    const li = document.createElement('li');
-    li.innerHTML = `${p.title} - ${p.description} - ${p.price} руб. ${p.image_url ? '<img src="'+p.image_url+'">' : ''}`;
-    list.appendChild(li);
-  });
+// --- Store info ---
+async function loadStoreInfo() {
+    const res = await fetch('/api/store_info');
+    const data = await res.json();
+    if(data){
+        document.getElementById('store-name').value = data.name || '';
+        document.getElementById('store-inn').value = data.inn || '';
+        document.getElementById('store-address').value = data.address || '';
+        document.getElementById('store-email').value = data.email || '';
+        document.getElementById('store-phone').value = data.phone || '';
+    }
 }
 
-document.getElementById('addCategory').onclick = async () => {
-  const name = document.getElementById('categoryName').value;
-  if (!name) return alert('Введите название');
-  await fetch('/api/categories', {
-    method:'POST',
-    headers:{'Content-Type':'application/json', 'x-admin-token': token},
-    body: JSON.stringify({name})
-  });
-  document.getElementById('categoryName').value='';
-  loadCategories();
+async function saveStoreInfo(){
+    const body = {
+        name: document.getElementById('store-name').value,
+        inn: document.getElementById('store-inn').value,
+        address: document.getElementById('store-address').value,
+        email: document.getElementById('store-email').value,
+        phone: document.getElementById('store-phone').value
+    };
+    await fetch('/api/store_info', {
+        method:'POST',
+        headers: { 'Content-Type':'application/json', 'x-admin-token': ADMIN_TOKEN },
+        body: JSON.stringify(body)
+    });
+    alert('Сохранено');
 }
 
-document.getElementById('addProduct').onclick = async () => {
-  const title = document.getElementById('productTitle').value;
-  const description = document.getElementById('productDescription').value;
-  const price = document.getElementById('productPrice').value;
-  const category_id = document.getElementById('productCategory').value;
-  const image = document.getElementById('productImage').files[0];
-  if (!title || !description || !price || !category_id) return alert('Заполните все поля');
-  const form = new FormData();
-  form.append('title', title);
-  form.append('description', description);
-  form.append('price', price);
-  form.append('category_id', category_id);
-  if (image) form.append('image', image);
-  await fetch('/api/products', { method:'POST', headers:{'x-admin-token': token}, body: form });
-  document.getElementById('productTitle').value='';
-  document.getElementById('productDescription').value='';
-  document.getElementById('productPrice').value='';
-  document.getElementById('productImage').value='';
-  loadProducts();
+// --- Categories ---
+async function loadCategories(){
+    const res = await fetch('/api/categories');
+    const data = await res.json();
+    const list = document.getElementById('category-list');
+    const select = document.getElementById('product-category');
+    list.innerHTML = '';
+    select.innerHTML = '';
+    data.forEach(c=>{
+        const li = document.createElement('li');
+        li.textContent = c.name;
+        list.appendChild(li);
+        const opt = document.createElement('option');
+        opt.value = c.id;
+        opt.textContent = c.name;
+        select.appendChild(opt);
+    });
 }
 
+async function addCategory(){
+    const name = document.getElementById('category-name').value;
+    if(!name) return alert('Введите название категории');
+    await fetch('/api/categories', {
+        method:'POST',
+        headers:{ 'Content-Type':'application/json','x-admin-token':ADMIN_TOKEN },
+        body: JSON.stringify({name})
+    });
+    document.getElementById('category-name').value = '';
+    loadCategories();
+}
+
+// --- Products ---
+async function loadProducts(){
+    const res = await fetch('/api/products');
+    const data = await res.json();
+    const list = document.getElementById('product-list');
+    list.innerHTML = '';
+    data.forEach(p=>{
+        const li = document.createElement('li');
+        li.innerHTML = `<b>${p.title}</b> - ${p.description} - ${p.price} руб.<br>
+                        ${p.image_url ? `<img src="${p.image_url}">` : ''}`;
+        list.appendChild(li);
+    });
+}
+
+async function addProduct(){
+    const title = document.getElementById('product-title').value;
+    const description = document.getElementById('product-description').value;
+    const price = document.getElementById('product-price').value;
+    const category_id = document.getElementById('product-category').value;
+    const imageFile = document.getElementById('product-image').files[0];
+
+    if(!title || !price || !category_id) return alert('Заполните все поля');
+
+    const formData = new FormData();
+    formData.append('title', title);
+    formData.append('description', description);
+    formData.append('price', price);
+    formData.append('category_id', category_id);
+    if(imageFile) formData.append('image', imageFile);
+
+    await fetch('/api/products', {
+        method:'POST',
+        headers:{ 'x-admin-token': ADMIN_TOKEN },
+        body: formData
+    });
+
+    document.getElementById('product-title').value = '';
+    document.getElementById('product-description').value = '';
+    document.getElementById('product-price').value = '';
+    document.getElementById('product-image').value = '';
+
+    loadProducts();
+}
+
+// --- Initial load ---
+loadStoreInfo();
 loadCategories();
 loadProducts();
 </script>
